[package]
name = "rsa2_sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
pem = "1.0.2"
wasm-bindgen = "0.2.81"
base64 = "0.20.0-alpha.1"

[dependencies.ring]
version = "0.17.0-alpha.11"
features = ["std", "wasm32_c"]

[dev-dependencies]
wasm-bindgen-test = "0.3.31"


